# action-cletus-code

./: .actrc  .gitignore  .secrets.example  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  config.yaml  process_review.py  pyproject.toml  requirements.txt  test_single_comment.txt  utils.py
.claude/skills/github-actions-reviewer/: ANTI-PATTERNS.md  CHECKLIST.md  PATTERNS.md  SKILL.md
.github/workflows/: clean-test.yml  final-test.yml  re-review-pr.yml  release.yml  review-workflows.yml  review.yml  self-review.yml  test-comment-fix.yml  test-local.yml  test-skills.yml  test-unit.yml  test-v2.yml
action/: action.yml
docs/: issue-16-fix.md  issue-16-proof.md  issue-16-summary.md  test.md
examples/: k8s-workflow.yml
scripts/: act-test.sh
src/cletus_code/: __init__.py  __main__.py  config.py  extract_json.py  github_utils.py  process_review.py  run_review.py  validate_json.py
src/cletus_code/action_helpers/: __init__.py  runner.py
src/cletus_code/plugins/: __init__.py  base.py  kustomize.py
src/cletus_code/skills/: __init__.py  loader.py
src/cletus_code/templates/: generate_review_json_skill.md  review-schema.json  review.md.j2
templates/: review.md.j2
tests/: README.md  __init__.py  conftest.py  sample_review.json  test_comprehensive.py  test_process_review.py  test_schema_validation.py
tests/act_integration/: conftest.py  test_act_basic.py  test_re_review.py
tests/integration/: test_integration.py
tests/unit/: test_orchestrator.py  test_plugins.py  test_process_review.py  test_skills.py
