[project]
name = "process-review"
version = "0.1.0"
description = "Process reviews from Temu Claude Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
