[project]
name = "process-review"
version = "0.1.0"
description = "Process and publish pull request reviews with enhanced error handling and auto-merge capabilities"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
